# gst-plugin-sunxisrc

./: Makefile  Makefile.in  build_chroot.sh  config.status  configure  configure.ac
.github/workflows/: build_RK3566_debian.yml  build_x20_debian.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
src/: AllwinnerV4L2.c  AllwinnerV4L2.h  Makefile  Makefile.am  Makefile.in  gstsunxisrc.c  gstsunxisrc.h  h264enc.c  h264enc.h  jsonload.c  jsonload.h  sunxisrc_h264.json
src/.deps/: libgstsunxisrc_la-gstsunxisrc.Plo  libgstsunxisrc_la-h264enc.Plo
